fix: prevent profile card content from overflowing

--- a/ApiRequest1/api.css
+++ b/ApiRequest1/api.css
@@ -5,7 +5,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap:20px;
     background-color: rgb(0, 14, 37);
 }
 
@@ -21,7 +21,7 @@ body {
 
 .profile {
     box-sizing: border-box;
-    margin: 3px;
+    margin: 3px 3px 0 3px;
     width: calc(100% - 6px);
     height: 75%;
     border-radius: 10px 10px 0 0;
@@ -35,9 +35,9 @@ body {
 }
 
 .info {
-    padding: 7px;
+    padding: 0 10px 0 10px;
     color: white;
-    line-height: 1.2;
+    line-height: 0.5;
 }
 
 button {
